[package]
name = "rusty_ffmpeg"
version = "0.16.4+ffmpeg.7.1"
authors = ["ldm0 <ldm2993593805@163.com>"]
edition = "2021"
description = "A library that provides Rust bindings for FFmpeg with Rockchip support"
documentation = "https://docs.rs/rusty_ffmpeg"
readme = "README.md"
homepage = "https://github.com/anti-social/rusty_ffmpeg_rockchip/"
repository = "https://github.com/anti-social/rusty_ffmpeg_rockchip/"
license = "MIT"

keywords = ["ffmpeg", "ffi", "binding", "video", "audio"]
categories = ["external-ffi-bindings", "multimedia"]

build = "build.rs"
links = "ffmpeg"
exclude = [".github"]

# Doc test of generated binding is non-sense https://github.com/rust-lang/cargo/issues/3720
[lib]
doctest = false

[dependencies]

[build-dependencies]
bindgen = "0.71"
camino = "1.1"
indoc = "2.0.6"
once_cell = "1.12"
vcpkg = { version = "0.2", optional = true }

[target.'cfg(not(windows))'.build-dependencies]
pkg-config = "0.3"

[features]
# Probe and link FFmpeg with pkg-config
link_system_ffmpeg = []
# Probe and link FFmpeg with vcpkg
link_vcpkg_ffmpeg = ["vcpkg"]
# FFmpeg 5.* support
ffmpeg5 = []
# FFmpeg 6.* support
ffmpeg6 = []
# FFmpeg 7.* support
ffmpeg7 = []

[dev-dependencies]
clap = { version = "4.5.45", features = ["derive"] }
rsmpeg = "0.17.0"

[patch.crates-io]
rusty_ffmpeg = { path = "./" }
